--- a/package.json
+++ b/package.json
@@ -7,8 +7,11 @@
     "test": "jest"
   },
   "dependencies": {
+    "js-md5": "^0.7.3",
+    "moment": "^2.24.0",
     "react": "16.6.3",
     "react-native": "0.58.3",
+    "react-native-config": "^0.11.7",
     "react-navigation": "2",
     "react-redux": "^6.0.0",
     "redux": "^4.0.1",
@@ -19,6 +22,7 @@
     "babel-jest": "24.0.0",
     "jest": "24.0.0",
     "metro-react-native-babel-preset": "0.51.1",
+    "react-native-dotenv": "^0.2.0",
     "react-test-renderer": "16.6.3"
   },
   "jest": {
