--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 MARVEL_PRIVATE_KEY=1e611e88db40f81b8213cfdd4e8c465377892a46
 MARVEL_PUBLIC_KEY=ce7b0f32874762a30240a9637efdd407
+API_URL=http://gateway.marvel.com/v1/public/
