[FEATURE] Add rn web

--- a/package.json
+++ b/package.json
@@ -4,22 +4,76 @@
   "private": true,
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
-    "test": "jest"
+    "test": "jest",
+    "web:build:vendor-dev": "rm -rf web/vendor-dev; NODE_ENV=development webpack --config web/vendor.webpack.config.js || rm -rf web/vendor-dev",
+    "web": "[ -d web/vendor-dev ] || npm run web:build:vendor-dev && NODE_ENV=development webpack-dev-server -d --host 0.0.0.0 --port 8555 --config web/webpack.config.js --inline --hot --colors",
+    "web:clean": "rm -rf web/vendor web/vendor-dev web/build",
+    "yarn": "rm -rf web/vendor; NODE_ENV=production webpack --config web/vendor.webpack.config.js",
+    "web:build:app": "rm -rf web/build; NODE_ENV=production webpack --config web/webpack.config.js",
+    "web:build": "npm run web:build:vendor && npm run web:build:app",
+    "web:serve": "http-serve -p 3001 --gzip true ./web/build"
   },
   "dependencies": {
-    "react": "16.6.3",
-    "react-native": "0.58.3",
+    "react": "^16.8.3",
+    "react-art": "^16.8.3",
+    "react-dom": "^16.8.3",
+    "react-native": "0.55",
+    "react-native-web": "^0.10.0",
     "react-navigation": "2",
     "react-redux": "^6.0.0",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
-    "babel-core": "^7.0.0-bridge.0",
-    "babel-jest": "24.0.0",
-    "jest": "24.0.0",
-    "metro-react-native-babel-preset": "0.51.1",
-    "react-test-renderer": "16.6.3"
+    "@babel/core": "^7.2.2",
+    "@babel/plugin-proposal-class-properties": "^7.0.0",
+    "@babel/plugin-proposal-decorators": "^7.0.0",
+    "@babel/plugin-proposal-do-expressions": "^7.0.0",
+    "@babel/plugin-proposal-export-default-from": "^7.0.0",
+    "@babel/plugin-proposal-export-namespace-from": "^7.0.0",
+    "@babel/plugin-proposal-function-bind": "^7.0.0",
+    "@babel/plugin-proposal-function-sent": "^7.0.0",
+    "@babel/plugin-proposal-json-strings": "^7.0.0",
+    "@babel/plugin-proposal-logical-assignment-operators": "^7.0.0",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.0.0",
+    "@babel/plugin-proposal-numeric-separator": "^7.0.0",
+    "@babel/plugin-proposal-pipeline-operator": "^7.0.0",
+    "@babel/plugin-proposal-throw-expressions": "^7.0.0",
+    "@babel/plugin-syntax-dynamic-import": "^7.0.0",
+    "@babel/plugin-syntax-import-meta": "^7.0.0",
+    "@babel/plugin-transform-runtime": "^7.0.0",
+    "@babel/preset-env": "^7.2.3",
+    "@babel/preset-es2015": "^7.0.0-beta.53",
+    "@babel/preset-flow": "^7.0.0",
+    "@babel/preset-react": "^6.24.1",
+    "@babel/preset-typescript": "^7.1.0",
+    "@babel/runtime": "^7.2.0",
+    "@react-navigation/web": "^1.0.0-alpha.7",
+    "add-asset-html-webpack-plugin": "^2.0.1",
+    "babel-core": "7.0.0-bridge.0",
+    "babel-jest": "^24.1.0",
+    "babel-loader": "^7.1.5",
+    "babel-plugin-flow-react-proptypes": "^24.1.2",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-react-native": "^4.0.1",
+    "copy-webpack-plugin": "^4.0.1",
+    "dotenv-webpack": "^1.7.0",
+    "html-webpack-plugin": "^2.28.0",
+    "http-serve": "^1.0.1",
+    "jest": "19.0.2",
+    "json-loader": "^0.5.4",
+    "metro-react-native-babel-preset": "^0.51.1",
+    "offline-plugin": "^4.7.0",
+    "react-hot-loader": "^1.3.1",
+    "react-test-renderer": "^16.7.0",
+    "source-map-loader": "^0.2.4",
+    "transform-runtime": "0.0.0",
+    "ts-loader": "^5.3.3",
+    "typescript": "^3.2.4",
+    "url-loader": "^0.5.8",
+    "webpack": "^2.7.0",
+    "webpack-cli": "^3.2.1",
+    "webpack-dev-server": "^2.4.2"
   },
   "jest": {
     "preset": "react-native"
