--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "jest": "24.0.0",
     "metro-react-native-babel-preset": "0.51.1",
     "react-native-dotenv": "^0.2.0",
-    "react-test-renderer": "16.6.3"
+    "react-test-renderer": "16.6.3",
+    "underscore": "^1.9.1"
   },
   "jest": {
     "preset": "react-native"
