--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "16.6.3",
     "react-native": "0.58.3",
     "react-native-config": "^0.11.7",
+    "react-native-web": "^0.10.0",
     "react-navigation": "2",
     "react-redux": "^6.0.0",
     "redux": "^4.0.1",
